--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "express": "^4.14.0",
     "grunt": "^1.0.1",
+    "helmet": "^3.0.0",
     "httpster": "^1.0.3",
     "nodemailer": "^2.6.4"
   },
